[tool.poetry]
name = "parabois_bot"
version = "0.0.1"
description = "Parabois discord bot"
authors = ["ZerdoX-x <zerdox.cool4@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
python-dotenv = "^0.19.0"
youtube_dl = "^2021.6.6"
PyNaCl = "^1.4.0"

[tool.poetry.dev-dependencies]
pylama = "^7.7.1"
black = "^21.9b0"
pre-commit = "^2.15.0"
isort = "^5.9.3"

[tool.poetry.scripts]
start = "parabois_bot:main"
lint = "tools.linter:lint"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
